jenkins/base/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jenkins
  name: jenkins-service
  namespace: jenkins
spec:  
  ports:
  - nodePort: 30081
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: jenkins
  type: NodePort
status:
  loadBalancer:
    ingress:
    - hostname: localhost
